unpackaged/main/default/objects/Opportunity/fields/Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Company_Name__c</fullName>
    <description>Name of company associated with the Opportunity</description>
    <label>Company Name</label>
    <length>120</length>
    <type>Text</type>
</CustomField>