unpackaged/main/default/objects/Opportunity/fields/Expected_Annual_Volume_del__c.field-meta.xml
<CustomField>
    <fullName>Expected_Annual_Volume_del__c</fullName>
    <label>Expected Annual Volume</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>