unpackaged/main/default/objects/Opportunity/fields/Invoice_paid__c.field-meta.xml
<CustomField>
    <fullName>Invoice_paid__c</fullName>
    <label>Invoice paid</label>
    <summaryFilterItems>
        <field>Invoice1__c.Paid__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Invoice1__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>