unpackaged/main/default/objects/Opportunity/fields/Job_Title__c.field-meta.xml
<CustomField>
    <fullName>Job_Title__c</fullName>
    <description>Title of Lead associated with the Opportunity</description>
    <label>Job Title</label>
    <length>120</length>
    <type>Text</type>
</CustomField>