unpackaged/main/default/objects/Opportunity/fields/Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Last_Name__c</fullName>
    <description>Last name of the account associated with the Opportunity</description>
    <label>Last Name</label>
    <length>120</length>
    <type>Text</type>
</CustomField>