unpackaged/main/default/objects/Opportunity/fields/Mailing_City__c.field-meta.xml
<CustomField>
    <fullName>Mailing_City__c</fullName>
    <description>Mailing City associated with the Opportunity</description>
    <label>Mailing City</label>
    <length>120</length>
    <type>Text</type>
</CustomField>