unpackaged/main/default/objects/Opportunity/fields/Mailing_Street__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Street__c</fullName>
    <description>Mailing address (street) associated with the Opportunity</description>
    <label>Mailing Street</label>
    <length>120</length>
    <type>Text</type>
</CustomField>