unpackaged/main/default/objects/Opportunity/fields/Mailing_Zip__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Zip__c</fullName>
    <description>Zip code associated with the Opportunity</description>
    <label>Mailing Zip</label>
    <length>9</length>
    <type>Text</type>
</CustomField>