unpackaged/main/default/objects/Opportunity/fields/Market_Pricing__c.field-meta.xml
<CustomField>
    <fullName>Market_Pricing__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Billing Address Price Book</inlineHelpText>
    <label>Price Book</label>
    <referenceTo>Pricebook2</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>