unpackaged/main/default/objects/Opportunity/fields/QuoteBeginDate__c.field-meta.xml
<CustomField>
    <fullName>QuoteBeginDate__c</fullName>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>