unpackaged/main/default/objects/Opportunity/fields/QuoteEndDate__c.field-meta.xml
<CustomField>
    <fullName>QuoteEndDate__c</fullName>
    <label>End Date</label>
    <type>Date</type>
</CustomField>