unpackaged/main/default/objects/Opportunity/fields/QuoteNumber__c.field-meta.xml
<CustomField>
    <fullName>QuoteNumber__c</fullName>
    <label>Quote Number</label>
    <length>32</length>
    <type>Text</type>
</CustomField>