unpackaged/main/default/objects/Opportunity/listViews/Support_Opportunities.listView-meta.xml
<ListView>
    <fullName>Support_Opportunities</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.TYPE</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>OPPORTUNITY.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.FULL_NAME</field>
        <operation>contains</operation>
        <value>customer,nichole,rachel</value>
    </filters>
    <label>Support Opportunities</label>
    <sharedTo>
        <role>Customer_Service</role>
    </sharedTo>
</ListView>